Warnings reduced